# hothouse

./: .gitignore  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-docs.yml  publish-to-pypi.yml  runtests.yml
data/: pyramid.ply  pyramid_untriangulated.ply
docs/: Makefile
docs/source/: conf.py  hothouse.rst  index.rst  installation.rst
examples/: ht.py  ray_count_viz.ipynb  sun_cast.py
hothouse/: __init__.py  _version.py  blaster.py  callback_handler.pxd  callback_handler.pyx  datasets.py  model.py  plant_model.py  ray_callbacks.pyx  scene.py  scene_viz.py  sun_calc.py  traits_support.py
tests/: conftest.py  test_blasters.py  test_hothouse.py  test_model.py  test_scene.py  test_sun_calc.py
