[bdist_wheel]
universal = 1

[build-system]
requires = [
  "setuptools >= 61.0",
  "setuptools_scm",
  "Cython>=0.29.20",
  "numpy>=1.13.0",
  "embreex>=4.0.0rc0",
]
build-backend = "setuptools.build_meta"

[project]
name = "hothouse"
dynamic = [
  "version",
  "readme",
]
dependencies = [
    "Click>=6.0",
    "embreex>=4.0.0",
    "pooch>=0.3.1",
    "plyfile>=0.7",
    "numpy>=1.13.0",
    "traitlets>=4.3.3",
    "traittypes>=0.2.1",
    "pvlib>=0.7.2",
    "tables>=3.6.1",
    "pythreejs>=2.2.0",
    "pywavefront",
]

description = "Embree-based ray tracer for photosynthetic yields in plant canopies"
license-files = ["LICEN[CS]E*"]
license = "MIT"
keywords = [
  "hothouse"
]
authors = [
  { name="Matthew Turk", email="matthewturk@gmail.com" },
  { name="Meagan Lang", email="langmm.astro@gmail.com" },
]
maintainers = [
  { name="Matthew Turk", email="matthewturk@gmail.com" },
  { name="Meagan Lang", email="langmm.astro@gmail.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">= 3.9"

# [project.scripts]
# hothouse = "hothouse.cli:main"
[project.entry-points]
console_scripts = { hothouse="hothouse.cli:main" }

[project.urls]
Homepage = "https://github.com/matthewturk/hothouse"
Documentation = "https://github.com/matthewturk/hothouse"
Repository = "https://github.com/matthewturk/hothouse"
Issues = "https://github.com/matthewturk/hothouse/issues"
Changelog = "https://github.com/matthewturk/hothouse/blob/main/HISTORY.rst"

[project.optional-dependencies]
dev = [
  'pytest',
  'pytest-cov',
  'sphinx',
  'flake8',
  'pytz',
]

[tool.setuptools]
include-package-data = true
packages = ["hothouse"]

[tool.setuptools_scm]
# git_describe_command = "git describe --tags --long"
version_file = "hothouse/_version.py"

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "HISTORY.rst"]}

[tool.pytest.ini_options]
minversion = "6.0"
norecursedirs = [
  ".*", "build", "dist", "CVS", "_darcs", "{arch}", "*.egg",
]
testpaths = "tests" 
filterwarnings = [
  # Warnings from traittypes import
  "ignore:((.|\n)*)Sentinel is not a public part of the traitlets API((.|\n)*)",
  "ignore:((.|\n)*)was set from the constructor((.\n)*)",
]

[tool.coverage.run]
omit = [
  # "*/python?.?/*",
  "*/lib-python/?.?/*.py",
  "*/lib_pypy/_*.py",
  "*/site-packages/ordereddict.py",
  "*/site-packages/nose/*",
  "*/unittest2/*",
]

[tool.coverage.report]
sort = "Cover"
ignore_errors = true
show_missing = true
exclude_lines = [
  "pragma: Python 3.8",
  "pragma: no cover",
  "pragma: debug",
  "pragma: in progress",
  "pragma: config",
  "pragma: completion",
  "pragma: testing",
  "pragma: version",
  "pragma: intermittent",
  "pragma: deprecated",
  "pragma: extern",
  "def __repr__",
  "def description_prefix",
  "if 0:",
  "if False:",
  "if __name__ == .__main__.:",
]

[tool.cibuildwheel]
test-requires = ["pytest"]
test-command = "pytest -m {project}/tests"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313', 'py314']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | _version\.py
)/
'''

